GenShen: Global GC should not swap remembered sets for the verifier

XMLWordPrintable

    • gc

      The remembered sets are swapped during a global GC when `ShenandoahVerify` is enabled. This is a change to the GC behavior to satisfy the verifier and ultimately defeats the purpose of the verifier here.

            Assignee:
            William Kemper
            Reporter:
            William Kemper
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: