8338763: GenShen: Global GC should not swap remembered sets for the verifier

Reviewed-by: kdnilsen, ysr